# jolt

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: pr.yml
crates/jolt/: Cargo.toml
crates/jolt-cli/: Cargo.toml
crates/jolt-cli/src/: cli.rs  cmd_install.rs  cmd_list.rs  cmd_search.rs  cmd_update.rs  lib.rs
crates/jolt-manager/: Cargo.toml
crates/jolt-manager/src/: manager.rs
crates/jolt/src/: main.rs
