[package]
name = "jolt-cli"
authors.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true

jolt-manager.workspace = true
